# forgeproxy

./: .envrc  .gitignore  README.md  config.example.yaml  flake.nix  otel-collector-config.example.yaml  run-flake-check-capture.sh
.github/workflows/: ci.yml
dev/: flake.nix
docs/: adaptive-tuning.md  consolidation-locking.md  performance-tuning.md  repository-rename-shortcoming.md
ghe-key-lookup/: Cargo.toml
ghe-key-lookup/src/: main.rs
nix/: ami.nix  backend.nix  cache-layout.nix  dev.nix  forgeproxy-cache-report.nix  hardening.nix  jemalloc-valkey-rtree-fix.patch  jemalloc-valkey-runtime-large-dalloc-fix.patch  keydb-host.nix  keydb-secrets.nix  keydb-tls.nix  keydb.nix  module.nix  nginx-runtime.nix  nginx.nix  otel-collector.nix  package.nix  proxy-host.nix  secrets.nix  valkey-aofrw-load-handler-wait.patch  valkey-host.nix  valkey-libc-memory-usage-tests.patch  valkey-maxmemory-batched-deferred-client.patch  valkey-secrets.nix  valkey-tls.nix
nix/checks/: adaptive-tuning.nix  backend.nix  basic.nix  default.nix  eviction-lfu.nix  eviction-lru.nix  filtered-bundles.nix  ghe-key-lookup-keyring.nix  keyring-creds.nix  lambda-health-check.nix  pack-cache.nix  performance-module.nix  secrets-aws.nix  secrets-sops.nix  ssh-authz.nix  ssh-large-lsrefs.nix  startup-init-failure.nix  terraform-config.nix
nix/compliance/: default.nix  fedramp.nix  regulated.nix  soc2.nix
nix/flake/: dev-partition.nix
nix/ghe-key-lookup/: host.nix  module.nix  package.nix
nix/lib/: cache-layout.nix
nix/nixosConfigurations/: default.nix  forgeproxy-hardened.nix  forgeproxy.nix  ghe-key-lookup-hardened.nix  ghe-key-lookup.nix  valkey-hardened.nix  valkey.nix
nix/nixosConfigurations/aws/: forgeproxy-cache-volume.nix  forgeproxy-secrets.nix  ghe-key-lookup-secrets.nix  valkey-secrets.nix
nix/nixosModules/: default.nix
nix/nixosModules/compliance/: soc2.nix
nix/nixosModules/forgeproxy/: default.nix  otel-collector.nix  secrets.nix
nix/nixosModules/ghe-key-lookup/: default.nix
nix/nixosModules/hosts/: ghe-key-lookup-host.nix  proxy-host.nix  valkey-host.nix
nix/nixosModules/nginx/: default.nix  runtime.nix
nix/nixosModules/profiles/: ami.nix  dev-tools.nix  hardening.nix  local-vm.nix  performance.nix
nix/nixosModules/valkey/: default.nix
nix/overlays/: default.nix
nix/tests/: backend.nix  basic.nix  cache-layout.nix  common.nix  compliance.nix  eviction-lfu.nix  eviction-lru.nix  filtered-bundles.nix  ghe-key-lookup-keyring.nix  keyring-creds.nix  secrets-aws.nix  secrets-sops.nix  ssh-authz.nix  ssh-large-lsrefs.nix  startup-init-failure.nix
rust/: Cargo.toml  build.rs
rust/src/: adaptive_tuning.rs  background_work.rs  build_info.rs  clone_support.rs  config.rs  health.rs  main.rs  metrics.rs  observability.rs  repo_identity.rs  runtime_resource.rs  short_circuit.rs  tee_hydration.rs
rust/src/auth/: cache.rs  http_validator.rs  middleware.rs  mod.rs  ssh_resolver.rs  webhook.rs
rust/src/bundleuri/: bundlelist.rs  creation_token.rs  generator.rs  lifecycle.rs  mod.rs
rust/src/cache/: archive.rs  capacity.rs  layout.rs  lfu.rs  lru.rs  manager.rs  mod.rs  telemetry.rs
rust/src/coordination/: locks.rs  mod.rs  node.rs  pubsub.rs  redis.rs  registry.rs
rust/src/credentials/: keyring.rs  mod.rs  org_policy.rs
rust/src/forge/: gitea.rs  github.rs  gitlab.rs  mod.rs  rate_limit.rs
rust/src/git/: bare_repo.rs  commands.rs  mod.rs
rust/src/http/: archive.rs  bundle_serve.rs  handler.rs  protocolv2.rs
rust/src/pack_cache/: mod.rs  stitch.rs
rust/src/ssh/: mod.rs  server.rs  session.rs  upstream.rs
rust/src/storage/: s3.rs
scripts/: forgeproxy-cache-report
src/: Cargo.toml
src/src/: config.rs  health.rs  main.rs  metrics.rs
src/src/auth/: cache.rs  http_validator.rs  middleware.rs  mod.rs  ssh_resolver.rs  webhook.rs
src/src/bundleuri/: bundlelist.rs  creation_token.rs  generator.rs  lifecycle.rs  mod.rs
src/src/cache/: hydrator.rs  lfu.rs  lru.rs  manager.rs  mod.rs
src/src/coordination/: locks.rs  mod.rs  node.rs  pubsub.rs  redis.rs  registry.rs
src/src/credentials/: keyring.rs  mod.rs  ssh_to_https.rs  upstream.rs
src/src/forge/: gitea.rs  github.rs  gitlab.rs  mod.rs  rate_limit.rs
src/src/git/: bare_repo.rs  commands.rs  mod.rs
src/src/http/: archive.rs  bundle_serve.rs  handler.rs  mod.rs  protocolv2.rs
src/src/ssh/: mod.rs  server.rs  session.rs  upstream.rs
src/src/storage/: mod.rs  s3.rs
terraform/: .gitignore  README.md  ami.tf  bootstrap-secrets.tf  data.tf  ec2.tf  forgeproxy-bootstrap-secrets.example.json  ghe-key-lookup.tf  iam.tf  lambda.tf  networking.tf  outputs.tf  s3.tf  secrets.tf  terraform.tfvars.example  tls.tf  variables.tf  versions.tf
terraform/examples/basic/: .gitignore  .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/grafana/: README.md  main.tf  terraform.tfvars.example  variables.tf
terraform/grafana/dashboards/: forgeproxy.json.tftpl
terraform/lambda/: health_check.py  test_health_check.py
terraform/scripts/: check-bootstrap-secrets-conflict.sh  forgeproxy-post-deploy-cleanup.sh  forgeproxy-resolve-asg-launch-templates.sh  forgeproxy-resolve-slot.sh  forgeproxy-rollout-cleanup.sh  forgeproxy-rollout-prepare.sh  test-forgeproxy-resolve-asg-launch-templates.sh  test-forgeproxy-resolve-slot.sh  test-forgeproxy-rollout-cleanup.sh  test-forgeproxy-rollout-prepare.sh  valkey-tls-reload.sh
terraform/templates/: ghe-key-lookup-config.toml.tpl  otel-collector-config.yaml.tpl  service-config.yaml.tpl
