[package]
name = "ghe-key-lookup"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ghe-key-lookup"
path = "src/main.rs"

[dependencies]
axum              = { version = "0.8", features = ["macros"] }
tokio             = { version = "1",   features = ["full"] }
clap              = { version = "4",   features = ["derive"] }
serde             = { version = "1",   features = ["derive"] }
serde_json        = "1"
toml              = "0.8"
anyhow            = "1"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustix             = { version = "1",   features = ["fs"] }
