[package]
name = "forgeproxy"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Git Caching Reverse Proxy with bundle-uri support"

[features]
default = []
dev = []
fips = ["rustls/fips"]

[[bin]]
name = "forgeproxy"
path = "src/main.rs"

[dependencies]
# SSH server
russh = { git = "https://github.com/johnrichardrinehart/russh.git", rev = "be577f0e1edbdfe79aaa29f9f21635b73f64c02f", package = "russh" }

# HTTP framework
axum = { version = "0.8", features = ["macros"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Redis/Valkey client
fred = { version = "10", features = ["enable-rustls", "i-scripts", "subscriber-client"] }

# AWS SDK
aws-sdk-s3 = "1"
aws-sdk-secretsmanager = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-smithy-types = "1"
aws-credential-types = "1"

# TLS
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-native-certs = "0.8"
rustls-pemfile = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "grpc-tonic", "http-proto", "reqwest-client", "reqwest-rustls", "tls-roots", "tokio"] }

# Metrics
prometheus-client = "0.23"

# Linux kernel keyring
linux-keyutils = "0.2"

# Utilities
anyhow = "1"
thiserror = "2"
bytes = "1"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json", "stream"] }
url = "2"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
hmac = "0.12"
subtle = "2"
gethostname = "0.5"
zstd = "0.13"
flate2 = "1"
brotli = "8"
libc = "0.2"
