[package]
name = "gheproxy"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "GHE Caching Reverse Proxy with bundle-uri support"

[features]
default = []
fips = ["rustls/fips"]

[[bin]]
name = "gheproxy"
path = "src/main.rs"

[dependencies]
# SSH server
russh = { version = "0.46", features = [] }
russh-keys = "0.46"

# HTTP framework
axum = { version = "0.8", features = ["macros"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-trait = "0.1"

# Redis/KeyDB client
fred = { version = "10", features = ["enable-rustls", "i-scripts", "subscriber-client"] }

# AWS SDK
aws-sdk-s3 = "1"
aws-sdk-secretsmanager = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-smithy-types = "1"
aws-credential-types = "1"

# TLS
rustls = { version = "0.23", features = [] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Metrics
prometheus-client = "0.23"

# Linux kernel keyring
linux-keyutils = "0.2"

# Utilities
anyhow = "1"
thiserror = "2"
bytes = "1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
url = "2"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
hmac = "0.12"
gethostname = "0.5"
